[package]
name = "creditchain-network"
description = "CreditChain networking stack"
version = "0.1.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
creditchain-bitvec = { workspace = true }
creditchain-channels = { workspace = true }
creditchain-compression = { workspace = true }
creditchain-config = { workspace = true }
creditchain-crypto = { workspace = true }
creditchain-id-generator = { workspace = true }
creditchain-infallible = { workspace = true }
creditchain-logger = { workspace = true }
creditchain-memsocket = { workspace = true, optional = true }
creditchain-metrics-core = { workspace = true }
creditchain-netcore = { workspace = true }
creditchain-num-variants = { workspace = true }
creditchain-peer-monitoring-service-types = { workspace = true }
creditchain-proptest-helpers = { workspace = true, optional = true }
creditchain-short-hex-str = { workspace = true }
creditchain-time-service = { workspace = true }
creditchain-types = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
once_cell = { workspace = true }
ordered-float = { workspace = true }
pin-project = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rand = { workspace = true, features = ["small_rng"] }
# Note: we cannot rely on the workspace version of rand. So we use this workaround. See:
# https://github.com/ibankio/creditchain/blob/main/state-sync/creditchain-data-client/Cargo.toml#L41.
# See also https://github.com/ibankio/creditchain/issues/13031
rand_latest = { package = "rand", version = "0.8.5" }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
creditchain-bitvec = { workspace = true, features = ["fuzzing"] }
creditchain-config = { workspace = true, features = ["testing"] }
creditchain-memsocket = { workspace = true }
creditchain-netcore = { workspace = true, features = ["testing"] }
creditchain-proptest-helpers = { workspace = true }
creditchain-time-service = { workspace = true, features = ["testing"] }
creditchain-types = { workspace = true, features = ["fuzzing"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand_core = { workspace = true }

[features]
default = []
fuzzing = ["creditchain-bitvec/fuzzing", "creditchain-config/fuzzing", "creditchain-crypto/fuzzing", "creditchain-types/fuzzing", "creditchain-proptest-helpers", "creditchain-time-service/testing", "creditchain-types/fuzzing", "creditchain-memsocket/testing", "creditchain-netcore/fuzzing", "proptest", "proptest-derive"]
testing = ["creditchain-config/testing", "creditchain-time-service/testing", "creditchain-memsocket/testing", "creditchain-netcore/testing"]

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]
